--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ transformers~=4.39.2
 sentence-transformers~=2.2.0
 langchain-community~=0.0.31
 langchain-text-splitters~=0.0.1
+unstructured~=0.13.4
 zhipuai~=2.0.1
 pymilvus~=2.4.0
 faiss-cpu~=1.7.4
